force-app/main/default/objects/Sampling_Inspection__c/Sampling_Inspection__c.object-meta.xml
<CustomObject>
    <label>Sampling Inspection</label>
    <nameField>
        <displayFormat>SI-{YYYY}{MM}{0000}</displayFormat>
        <label>出样检查编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sampling Inspection</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>