force-app/main/default/objects/Sampling_Inspection__c/fields/After_Img__c.field-meta.xml
<CustomField>
    <fullName>After_Img__c</fullName>
    <label>After Img</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>