force-app/main/default/objects/Sampling_Inspection__c/fields/Before_Img__c.field-meta.xml
<CustomField>
    <fullName>Before_Img__c</fullName>
    <label>Before Img</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>