force-app/main/default/objects/Sampling_Inspection__c/fields/Display_Stand__c.field-meta.xml
<CustomField>
    <fullName>Display_Stand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>是否有展台</description>
    <label>Store Rack</label>
    <type>Checkbox</type>
</CustomField>