force-app/main/default/objects/Sampling_Inspection__c/fields/Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Type__c</fullName>
    <label>Display Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>