force-app/main/default/objects/Sampling_Inspection__c/fields/Exhibition_Format__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Format__c</fullName>
    <label>Exhibition Format</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hall Of Harmony</fullName>
            </value>
            <value>
                <fullName>Specialized Hall</fullName>
            </value>
            <value>
                <fullName>Island Platform</fullName>
            </value>
            <value>
                <fullName>On The wall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>