force-app/main/default/objects/Sampling_Inspection__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>任务Id+机型属性Id</description>
    <externalId>true</externalId>
    <label>外键</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>