force-app/main/default/objects/Sampling_Inspection__c/fields/Hisense_Rack__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Rack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hisense Rack</label>
    <type>Checkbox</type>
</CustomField>