force-app/main/default/objects/Sampling_Inspection__c/fields/Img_Status__c.field-meta.xml
<CustomField>
    <fullName>Img_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Img Status</label>
    <type>Checkbox</type>
</CustomField>