force-app/main/default/objects/Sampling_Inspection__c/fields/Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Date__c</fullName>
    <description>巡店检查日期</description>
    <label>检查日期</label>
    <type>Date</type>
</CustomField>