force-app/main/default/objects/Sampling_Inspection__c/fields/Inspection_Product_Item__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Product_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Product Item</label>
    <referenceTo>Inspection_Product_Item__c</referenceTo>
    <relationshipLabel>Sampling Inspection</relationshipLabel>
    <relationshipName>Sampling_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>