force-app/main/default/objects/Sampling_Inspection__c/fields/Inspection_Report__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Report</label>
    <referenceTo>Daily_Inspection_Report__c</referenceTo>
    <relationshipLabel>Sampling Inspection</relationshipLabel>
    <relationshipName>Sampling_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>