force-app/main/default/objects/Sampling_Inspection__c/fields/Inspection_Shop_Task__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Shop_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>巡店任务</label>
    <referenceTo>Inspection_Shop_Task__c</referenceTo>
    <relationshipName>Task_Sampling_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>