force-app/main/default/objects/Sampling_Inspection__c/fields/Is_Built_in_Video__c.field-meta.xml
<CustomField>
    <fullName>Is_Built_in_Video__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TV产品线检查项：是否有内置视频（阿根廷专用）</description>
    <inlineHelpText>TV product line check item: availability of built-in video (for Argentina only)</inlineHelpText>
    <label>Is Built-in Video</label>
    <type>Checkbox</type>
</CustomField>