force-app/main/default/objects/Sampling_Inspection__c/fields/Is_Check_Price__c.field-meta.xml
<CustomField>
    <fullName>Is_Check_Price__c</fullName>
    <label>Is Check Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>