force-app/main/default/objects/Sampling_Inspection__c/fields/Is_Epos__c.field-meta.xml
<CustomField>
    <fullName>Is_Epos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Epos是否正常（阿根廷专用）</description>
    <inlineHelpText>Is Epos normal (for Argentina only)</inlineHelpText>
    <label>Is Epos</label>
    <type>Checkbox</type>
</CustomField>