force-app/main/default/objects/Sampling_Inspection__c/fields/Is_Export__c.field-meta.xml
<CustomField>
    <fullName>Is_Export__c</fullName>
    <externalId>true</externalId>
    <label>Is_Export</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>