force-app/main/default/objects/Sampling_Inspection__c/fields/Is_Optimal__c.field-meta.xml
<CustomField>
    <fullName>Is_Optimal__c</fullName>
    <label>Is Optimal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>