force-app/main/default/objects/Sampling_Inspection__c/fields/Is_POP__c.field-meta.xml
<CustomField>
    <fullName>Is_POP__c</fullName>
    <label>POP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>