force-app/main/default/objects/Sampling_Inspection__c/fields/Is_Prototype_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Prototype_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>样机是否完整（阿根廷专用）</description>
    <inlineHelpText>Is prototype complete (for Argentina only)</inlineHelpText>
    <label>Is Prototype Complete</label>
    <type>Checkbox</type>
</CustomField>