force-app/main/default/objects/Sampling_Inspection__c/fields/On_Wall_Display__c.field-meta.xml
<CustomField>
    <fullName>On_Wall_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>是否有墙上出样（阿根廷专用）</description>
    <inlineHelpText>If there is on wall display (for Argentina only)</inlineHelpText>
    <label>On Wall Display</label>
    <type>Checkbox</type>
</CustomField>