force-app/main/default/objects/Sampling_Inspection__c/fields/POP__c.field-meta.xml
<CustomField>
    <fullName>POP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>是否有POP（阿根廷专用）</description>
    <inlineHelpText>If there is POP (for Argentina only)</inlineHelpText>
    <label>POP</label>
    <type>Checkbox</type>
</CustomField>