force-app/main/default/objects/Sampling_Inspection__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>产品</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND (4 OR 5)) OR 6 OR 7</booleanFilter>
        <filterItems>
            <field>Product__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>ALL_Product_Japan</value>
        </filterItems>
        <filterItems>
            <field>$User.Sales_Region__c</field>
            <operation>notEqual</operation>
            <value>Hisense South Africa, Hisense Indonesia, Hisense Chile, Hisense Thailand, Hisense Malaysia, Hisense Vietnam,Hisense Colombia,Hisense Argentina,Hisense West Africa,Hisense Saudi,Hisense Canada,Hisense Philippines,Hisense Peru,Hisense USA,Hisense Mexico</value>
        </filterItems>
        <filterItems>
            <field>Product__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>RegionalProduct</value>
        </filterItems>
        <filterItems>
            <field>$User.Country__c</field>
            <operation>equals</operation>
            <value>South Africa, Indonesia, Chile, Thailand, Malaysia, Vietnam,Argentina,West Africa,Saudi,Canada,Colombia,Philippines,Peru, Mexico</value>
        </filterItems>
        <filterItems>
            <field>$User.Sales_Region__c</field>
            <operation>equals</operation>
            <value>Hisense South Africa, Hisense Indonesia, Hisense Chile, Hisense Thailand, Hisense Malaysia, Hisense Vietnam,Hisense Colombia,Hisense Argentina,Hisense West Africa,Hisense Saudi,Hisense Canada,Hisense Philippines,Hisense Peru, Hisense USA, Hisense Mexico</value>
        </filterItems>
        <filterItems>
            <field>$Profile.ManageUsers</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.Sales_Region__c</field>
            <operation>equals</operation>
            <value>Hisense International</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Sampling Inspection</relationshipLabel>
    <relationshipName>Sampling_Inspection_Product</relationshipName>
    <type>Lookup</type>
</CustomField>