force-app/main/default/objects/Sampling_Inspection__c/fields/Quantity_Of_Exhibits_DS__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Of_Exhibits_DS__c</fullName>
    <description>展台出样数量（阿根廷专用）</description>
    <inlineHelpText>quantity of stand (for Argentina only)</inlineHelpText>
    <label>Quantity(Store)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>