force-app/main/default/objects/Sampling_Inspection__c/fields/Quantity_Of_Exhibits_OWD__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Of_Exhibits_OWD__c</fullName>
    <description>墙上出样数量（阿根廷专用）</description>
    <inlineHelpText>quantity of wall exhibits (for Argentina only)</inlineHelpText>
    <label>Quantity(wall)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>