force-app/main/default/objects/Sampling_Inspection__c/fields/Quantity_POP__c.field-meta.xml
<CustomField>
    <fullName>Quantity_POP__c</fullName>
    <label>Quantity(POP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>