force-app/main/default/objects/Sampling_Inspection__c/fields/ReRe__c.field-meta.xml
<CustomField>
    <fullName>ReRe__c</fullName>
    <description>出样描述</description>
    <label>出样描述</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>