force-app/main/default/objects/Sampling_Inspection__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <formula>Text(Shop__r.Sales_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>