force-app/main/default/objects/Sampling_Inspection__c/fields/Sample_Images_Url__c.field-meta.xml
<CustomField>
    <fullName>Sample_Images_Url__c</fullName>
    <label>图片链接</label>
    <type>Url</type>
</CustomField>