force-app/main/default/objects/Sampling_Inspection__c/fields/Sample_Inspector__c.field-meta.xml
<CustomField>
    <fullName>Sample_Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Inspector</label>
    <referenceTo>Sample_Inspector__c</referenceTo>
    <relationshipLabel>Sampling Inspection</relationshipLabel>
    <relationshipName>Sampling_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>