force-app/main/default/objects/Sampling_Inspection__c/fields/Sample_Item__c.field-meta.xml
<CustomField>
    <fullName>Sample_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>出样明细</label>
    <referenceTo>Sampling_Detail__c</referenceTo>
    <relationshipName>MVrr</relationshipName>
    <type>Lookup</type>
</CustomField>