force-app/main/default/objects/Sampling_Inspection__c/fields/Set_up_Status__c.field-meta.xml
<CustomField>
    <fullName>Set_up_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set up Status</label>
    <type>Checkbox</type>
</CustomField>