force-app/main/default/objects/Sampling_Inspection__c/fields/SIID__c.field-meta.xml
<CustomField>
    <fullName>SIID__c</fullName>
    <description>自定义ID</description>
    <label>SIID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>