force-app/main/default/objects/Sampling_Inspection__c/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <formula>IF( Flag__c , 2, CASE( Placement_Status__c , &apos;展出&apos;, 1, 3))</formula>
    <label>Sort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>