force-app/main/default/objects/Sampling_Inspection__c/fields/Unplanned_Sample__c.field-meta.xml
<CustomField>
    <fullName>Unplanned_Sample__c</fullName>
    <description>是否是计划外出样</description>
    <inlineHelpText>If it is unplanned sample</inlineHelpText>
    <label>Unplanned Sample</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>