force-app/main/default/objects/Sampling_Inspection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Shop__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Product__c</columns>
    <columns>Sample_Item__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>